apps/base/docker-registry/config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-registry
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: local-registry
  template:
    metadata:
      labels:
        app: local-registry
    spec:
      containers:
      - name: registry
        image: registry:2
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: config
          mountPath: /etc/docker/registry/
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: "1"
            memory: 2Gi
      volumes:
      - name: config
        configMap:
          name: registry-config
