apps/base/docker-registry/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-registry
  namespace: registry
spec:
  selector:
    app: local-registry
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: local-registry-nodeport
  namespace: registry
spec:
  selector:
    app: local-registry
  type: NodePort
  ports:
  - name: docker-registry
    port: 5000
    targetPort: 5000
