apps/base/docker-registry/config/registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-registry
  namespace: registry
  annotations:
    tailscale.com/proxy-group: ingress-proxy
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - registry
  defaultBackend:
    service:
      name: local-registry
      port:
        number: 5000
